fixes #9241: enable collapsing for labels, in addition to badges, when empty

--- a/less/labels.less
+++ b/less/labels.less
@@ -23,6 +23,11 @@
       cursor: pointer;
     }
   }
+
+  // Empty labels collapse automatically (not available in IE8)
+  &:empty {
+    display: none;
+  }
 }
 
 // Colors
